// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getEnvFilesForTask should return the correct env files for a standard task 1`] = `
[
  "libs/test-project/.env.build.local",
  "libs/test-project/.env.build",
  "libs/test-project/.build.local.env",
  "libs/test-project/.build.env",
  "libs/test-project/.env.local",
  "libs/test-project/.local.env",
  "libs/test-project/.env",
  ".env.build.local",
  ".env.build",
  ".build.local.env",
  ".build.env",
  ".env.local",
  ".local.env",
  ".env",
]
`;

exports[`getEnvFilesForTask should return the correct env files for a standard task with configurations 1`] = `
[
  "libs/test-project/.env.build.development.local",
  "libs/test-project/.env.build.development",
  "libs/test-project/.build.development.local.env",
  "libs/test-project/.build.development.env",
  "libs/test-project/.env.development.local",
  "libs/test-project/.env.development",
  "libs/test-project/.development.local.env",
  "libs/test-project/.development.env",
  "libs/test-project/.env.build.local",
  "libs/test-project/.env.build",
  "libs/test-project/.build.local.env",
  "libs/test-project/.build.env",
  "libs/test-project/.env.local",
  "libs/test-project/.local.env",
  "libs/test-project/.env",
  ".env.build.development.local",
  ".env.build.development",
  ".build.development.local.env",
  ".build.development.env",
  ".env.development.local",
  ".env.development",
  ".development.local.env",
  ".development.env",
  ".env.build.local",
  ".env.build",
  ".build.local.env",
  ".build.env",
  ".env.local",
  ".local.env",
  ".env",
]
`;

exports[`getEnvFilesForTask should return the correct env files for an atomized task 1`] = `
[
  "libs/test-project/.env.e2e-ci.local",
  "libs/test-project/.env.e2e-ci",
  "libs/test-project/.e2e-ci.local.env",
  "libs/test-project/.e2e-ci.env",
  "libs/test-project/.env.e2e.local",
  "libs/test-project/.env.e2e",
  "libs/test-project/.e2e.local.env",
  "libs/test-project/.e2e.env",
  "libs/test-project/.env.local",
  "libs/test-project/.local.env",
  "libs/test-project/.env",
  ".env.e2e-ci.local",
  ".env.e2e-ci",
  ".e2e-ci.local.env",
  ".e2e-ci.env",
  ".env.e2e.local",
  ".env.e2e",
  ".e2e.local.env",
  ".e2e.env",
  ".env.local",
  ".local.env",
  ".env",
]
`;

exports[`getEnvFilesForTask should return the correct env files for an atomized task with configurations 1`] = `
[
  "libs/test-project/.env.e2e-ci.staging.local",
  "libs/test-project/.env.e2e-ci.staging",
  "libs/test-project/.e2e-ci.staging.local.env",
  "libs/test-project/.e2e-ci.staging.env",
  "libs/test-project/.env.e2e.staging.local",
  "libs/test-project/.env.e2e.staging",
  "libs/test-project/.e2e.staging.local.env",
  "libs/test-project/.e2e.staging.env",
  "libs/test-project/.env.staging.local",
  "libs/test-project/.env.staging",
  "libs/test-project/.staging.local.env",
  "libs/test-project/.staging.env",
  "libs/test-project/.env.e2e-ci.local",
  "libs/test-project/.env.e2e-ci",
  "libs/test-project/.e2e-ci.local.env",
  "libs/test-project/.e2e-ci.env",
  "libs/test-project/.env.e2e.local",
  "libs/test-project/.env.e2e",
  "libs/test-project/.e2e.local.env",
  "libs/test-project/.e2e.env",
  "libs/test-project/.env.local",
  "libs/test-project/.local.env",
  "libs/test-project/.env",
  ".env.e2e-ci.staging.local",
  ".env.e2e-ci.staging",
  ".e2e-ci.staging.local.env",
  ".e2e-ci.staging.env",
  ".env.e2e.staging.local",
  ".env.e2e.staging",
  ".e2e.staging.local.env",
  ".e2e.staging.env",
  ".env.staging.local",
  ".env.staging",
  ".staging.local.env",
  ".staging.env",
  ".env.e2e-ci.local",
  ".env.e2e-ci",
  ".e2e-ci.local.env",
  ".e2e-ci.env",
  ".env.e2e.local",
  ".env.e2e",
  ".e2e.local.env",
  ".e2e.env",
  ".env.local",
  ".local.env",
  ".env",
]
`;
